# Coder-Codex-Gemini

./: .env.example  .gitignore  CLAUDE.md  PROJECT_ROADMAP.md  QUICKSTART.md  README.md  README_EN.md  config.example.toml  pyproject.toml  pytest.ini  setup-opencode.bat  setup-opencode.ps1  setup-opencode.sh  setup.ps1  setup.sh
.ccg/: decision_log.jsonl  degradation_log.jsonl  devconfig.example.yaml  devconfig.yaml  fallback-config.template.json  project-context.json  timeout_log.jsonl  user_preferences.json  verify-environment.sh
.claude/: settings.local.json
ai/: AI_ONBOARDING.md  CONTRACT_CHECKLIST.md  CONTRACT_QUICKREF.md  DEPENDENCIES.md  FAILURE_LOOP_DECISION.md  README.md  api_quota_handling.md  automation_integration.md  batch_decision_optimization.md  claude_architect.md  claude_review_checklist.md  code_style_guide.md  coder_quality_guide.md  codex_review_gate.md  context_aware_decision.md  contract_principles.md  contract_quality_standards.md  decision_authority_matrix.md  decision_conflict_resolution.md  decision_framework.md  decision_traceability.md  design_principles.md  doc_consolidation_plan.md  engineering_codex.md  environment_setup.md  failure_path_testing.md  frontend_guide.md  git_workflow.md  implementer_guardrails.md  java_guide.md  multi_project_isolation.md  project_handover_checklist.md  project_handover_guide.md  project_settings.template.json  python_guide.md  requirement_acceptance.md  requirement_guide.md  test_acceptance_criteria.md  testing_strategy.md  timeout_guardrails.md
docs/: CCG_WORKFLOW_ASSESSMENT.md  PLAYWRIGHT_GUIDE.md  (+4 more)
(+71 files in other folders)
