[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ccg-mcp"
version = "0.1.0"
description = "Claude + Coder + Codex + Gemini 多模型协作 MCP 服务器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
authors = [
    { name = "CCG-MCP Contributors" },
]
license = { text = "MIT" }
keywords = ["mcp", "fastmcp", "coder", "codex", "gemini", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/FredericMN/Coder-Codex-Gemini"

[project.scripts]
ccg-mcp = "ccg_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ccg_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/ccg_mcp", "README.md", "LICENSE"]
